--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="card">
-    <img class="card__image" src="./images/image-qr-code.png" alt="QR Code for frontendmentor.io.">
-    <h1 class="card__title">Improve your front-end skills by building projects</h1>
-    <p class="card__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  <main>
+    <article class="card">
+      <img class="card__image" src="./images/image-qr-code.png" alt="QR Code for frontendmentor.io.">
+      <h1 class="card__title">Improve your front-end skills by building projects</h1>
+      <p class="card__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </article>
+  </main>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Saul Almanzar</a>.
