--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <p class="card__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </article>
   </main>
-  <!-- <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Saul Almanzar</a>.
-  </div> -->
+    Coded by <a href="https://github.com/almanzarsaul">Saul Almanzar</a>.
+</footer>
 </body>
 </html>
